--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 <header class="header">
       <div class="header-container container">
          <nav class="header-nav list">
-                <a class="header-logo link" href="./index.html"
+                <a class="header-logo current link" href="./index.html"
                 >Web<span class="header-span">Studio</span></a>
            
                   <ul class="header-menu-list list">
