--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 <header class="header">
       <div class="header-container container">
          <nav class="header-nav list">
-                <a class="header-logo current link" href="./index.html"
+                <a class="header-logo link" href="./index.html"
                 >Web<span class="header-span">Studio</span></a>
            
                   <ul class="header-menu-list list">
@@ -31,7 +31,7 @@
                         <a class="header-list-link link" href="./index.html">Studio</a>
                     </li>
                       <li class="header-list">
-                        <a class="header-list-link link" href="./portfolio.html">Portfolio</a>
+                        <a class="header-list-link current link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="header-list">
                         <a class="header-list-link link" href="">Contacts</a>
