--- a/index.html
+++ b/index.html
@@ -64,20 +64,40 @@
     <section class="benefits list">
         <div class="benefits-container container" >
             <h2  class="visually-hidden">benefits</h2>
-            <ul class="benefits-socials list">
+            <ul class="benefits-socials list">   
                 <li class="benefits-list">
+                <div class="benefits-list-item-icons">
+                    <svg class="benefits-icons" width="64" height="64">
+                       <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                </div>
                     <h3 class="benefits-title">Strategy</h3>
                     <p class="benefits-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="benefits-list">
+                <div class="benefits-list-item-icons">
+                    <svg class="benefits-icons" width="64" height="64">
+                        <use href="./images/icons.svg#icon-clock"></use>
+                    </svg>
+                </div>
                     <h3 class="benefits-title">Punctuality</h3>
                     <p class="benefits-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="benefits-list">
+                <div class="benefits-list-item-icons">
+                    <svg class="benefits-icons" width="64" height="64">
+                       <use href="./images/icons.svg#icon-diagram"></use>
+                    </svg>
+                </div>
                     <h3 class="benefits-title">Diligence</h3>
                     <p class="benefits-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="benefits-list">
+                <div class="benefits-list-item-icons">
+                    <svg class="benefits-icons" width="64" height="64">
+                       <use href="./images/icons.svg#icon-astronaut"></use>
+                    </svg>
+                </div>
                     <h3 class="benefits-title">Technologies</h3>
                     <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li> 
@@ -281,6 +301,58 @@
     </div>
 </section>
 
+ <!-- Section 5 Customers -->
+
+      <section class="customers-section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-list-item">
+              <a href="" class="customers-links link">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-links link">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-links link">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-links link">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-links link">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-links link">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
 </main>
 <!-- Footer-->
 <footer class="footer">
@@ -295,7 +367,7 @@
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-button-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-closeblack"></use>
           </svg>
         </button>
       </div>
