--- a/portfolio.html
+++ b/portfolio.html
@@ -76,84 +76,85 @@
             </ul>
         
 
-            <ul class="navigation-socials-portfolio list">
-                <li class="navigation-list">
-                    <a class="link">
+            <ul class="portfolio-socials-ul list">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
+                     
                         <img src="./images/portfolioimg1.jpg" alt="Banking App Interface Concept" width="360" />
                         <div class="portfolio-list-item">
-                            <h2 class="navigation-title">Banking App Interface Concept</h2>
+                            <h2 class="portfolio-title">Banking App Interface Concept</h2>
                             <p class="potfolio-text">App</p>
                         </div>
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg2.jpg" alt="Cashless Payment" width="360" />
                     <div class="portfolio-list-item">    
-                            <h2 class="navigation-title">Cashless Payment</h2>
+                            <h2 class="portfoliotitle">Cashless Payment</h2>
                             <p class="potfolio-text">Marketing</p>
                     </div>   
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg3.jpg" alt="Meditation App" width="360" />
                     <div class="portfolio-list-item">
-                            <h2 class="navigation-title">Meditation App</h2>
+                            <h2 class="portfolio-title">Meditation App</h2>
                             <p class="potfolio-text">App</p>
                     </div>   
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg4.jpg" alt="Taxi Service" width="360" />
                     <div class="portfolio-list-item">   
-                            <h2 class="navigation-title">Taxi Service</h2>
+                            <h2 class="portfolio-title">Taxi Service</h2>
                             <p class="potfolio-text">Marketing</p>
                     </div>    
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg5.jpg" alt="Screen Illustrations" width="360" />
                     <div class="portfolio-list-item">    
-                            <h2 class="navigation-title">Screen Illustrations</h2>
+                            <h2 class="portfolio-title">Screen Illustrations</h2>
                             <p class="potfolio-text">Design</p>
                     </div>  
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg6.jpg" alt="Online Courses" width="360" />
                     <div class="portfolio-list-item">  
-                            <h2 class="navigation-title">Online Courses</h2>
+                            <h2 class="portfolio-title">Online Courses</h2>
                             <p class="potfolio-text">Marketing</p>
                     </div>      
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg7.jpg" alt="Instagram Stories Concept" width="360" />
                     <div class="portfolio-list-item">  
-                            <h2 class="navigation-title">Instagram Stories Concept</h2>
+                            <h2 class="portfolio-title">Instagram Stories Concept</h2>
                             <p class="potfolio-text">Design</p>
                     </div>    
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg8.jpg" alt="Organic Food" width="360" />
                     <div class="portfolio-list-item">   
-                            <h2 class="navigation-title">Organic Food</h2>
+                            <h2 class="portfolio-title">Organic Food</h2>
                             <p class="potfolio-text">Web Site</p>
                     </div> 
                     </a>
                 </li>
-                <li class="navigation-list">
-                    <a class="link">
+                <li class="portfolio-list">
+                    <a class="portfolio-list-link link">
                         <img src="./images/portfolioimg9.jpg" alt="Fresh Coffee" width="360" />
                     <div class="portfolio-list-item">  
-                            <h2 class="navigation-title">Fresh Coffee</h2>
+                            <h2 class="portfolio-title">Fresh Coffee</h2>
                             <p class="potfolio-text">Web Site</p>
                     </div>    
                     </a>
