--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 
             <ul class="portfolio-socials-ul list">
                 <li class="portfolio-list">        
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                     <div class="portfolio-list-box">
                         <img src="./images/portfolioimg1.jpg" alt="Banking App Interface Concept" width="360" />
                         
@@ -105,7 +105,7 @@
                     </p>
                         </div>
                     <div class="portfolio-list-item">    
-                            <h2 class="portfoliotitle">Cashless Payment</h2>
+                            <h2 class="portfolio-title">Cashless Payment</h2>
                             <p class="potfolio-text">Marketing</p>
                     </div>   
                     </a>
