--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                          <div class="portfolio-list-box">
                         <img src="./images/portfolioimg2.jpg" alt="Cashless Payment" width="360" />
                     <p class="overlay-text overlay">
@@ -111,7 +111,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg3.jpg" alt="Meditation App" width="360" />
                              <p class="overlay-text overlay">
@@ -127,7 +127,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg4.jpg" alt="Taxi Service" width="360" />
                         <p class="overlay-text overlay">
@@ -143,7 +143,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg5.jpg" alt="Screen Illustrations" width="360" />
                         <p class="overlay-text overlay">
@@ -159,7 +159,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg6.jpg" alt="Online Courses" width="360" />
                             <p class="overlay-text overlay">
@@ -175,7 +175,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg7.jpg" alt="Instagram Stories Concept" width="360" />
                         <p class="overlay-text overlay">
@@ -191,7 +191,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg8.jpg" alt="Organic Food" width="360" />
                         <p class="overlay-text overlay">
@@ -207,7 +207,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list">
-                    <a class="portfolio-list-link link">
+                    <a class="portfolio-list-link link" href="">
                         <div class="portfolio-list-box">
                         <img src="./images/portfolioimg9.jpg" alt="Fresh Coffee" width="360" />
                         <p class="overlay-text overlay">
